@@ -11,14 +11,15 @@ DESCRIPTION="Advanced Normalitazion Tools for neuroimaging"
 HOMEPAGE="http://stnava.github.io/ANTs/"
 SRC_URI="
 	test? (
-		http://chymera.eu/distfiles/ants_testdata-2.3.1_p20191013.tar.xz
+		http://chymera.eu/distfiles/ants_testdata-${PV}.tar.xz
 	)
 "
 EGIT_REPO_URI="https://github.com/stnava/ANTs.git"
+EGIT_COMMIT="f78b2d4a382d3090230641b5ade5da28962dad04"
 
 SLOT="0"
 LICENSE="BSD"
-KEYWORDS=""
+KEYWORDS="~amd64 ~x86"
 IUSE="test vtk"
 
 DEPEND="
@@ -31,27 +32,28 @@ DEPEND="
 RDEPEND="${DEPEND}"
 
 PATCHES=(
-	"${FILESDIR}/${PN}-2.3.1_p20191013-paths.patch"
+	"${FILESDIR}/${P}-logic.patch"
+	"${FILESDIR}/${P}-paths.patch"
 )
 
 src_unpack() {
 	git-r3_src_unpack
 	if use test; then
 		mkdir -p "${S}/.ExternalData/MD5" || die "Could not create test data directory."
-		tar xvf "${DISTDIR}/ants_testdata-2.3.1_p20191013.tar.xz" -C "${S}/.ExternalData/MD5/" > /dev/null || die "Could not unpack test data."
+		tar xvf "${DISTDIR}/ants_testdata-${PV}.tar.xz" -C "${S}/.ExternalData/MD5/" > /dev/null || die "Could not unpack test data."
 	fi
 }
 
 src_configure() {
 	local mycmakeargs=(
 		-DUSE_SYSTEM_ITK=ON
-		-DITK_DIR="/usr/include/ITK-5.0/"
+		-DITK_DIR="${EROOT}/usr/include/ITK-5.0/"
 		-DBUILD_TESTING="$(usex test ON OFF)"
 		-DUSE_VTK=$(usex vtk ON OFF)
 		-DUSE_SYSTEM_VTK=$(usex vtk ON OFF)
 	)
 	use vtk && mycmakeargs+=(
-		-DVTK_DIR="/usr/include/vtk-8.1/"
+		-DVTK_DIR="${EROOT}/usr/include/vtk-8.1/"
 	)
 	use test && mycmakeargs+=(
 		-DExternalData_OBJECT_STORES="${S}/.ExternalData/MD5"
@@ -65,6 +67,6 @@ src_install() {
 	cd "${WORKDIR}/${P}/Scripts" || die "scripts dir not found"
 	dobin *.sh
 	dodir /usr/$(get_libdir)/ants
-	install -t "${D}"/usr/$(get_libdir)/ants * || die
+	install -t "${D}"/"${EROOT%/}"/usr/$(get_libdir)/ants * || die
 	doenvd "${FILESDIR}"/99ants
 }
