@@ -1,3 +1,9 @@
+*ants-2.3.1_p20191013 (14 Dec 2019)
+
+  14 Dec 2019;  <chymera@gentoo.org> +ants-2.3.1_p20191013.ebuild,
+  -ants-9999.ebuild, metadata.xml:
+  sci-biology/ants: prefix fix ahead of Gentoo Science
+
   25 Nov 2019;  <chymera@gentoo.org> -ants-2.3.1_p20191013.ebuild:
   sci-biology/ants: migrated version bump to Gentoo Scinece  https://gitweb.gent
   oo.org/proj/sci.git/commit/?id=402183f38c721910fe038ed4ce04e0a98a37c584
